src/objects/ITOP_Location__c.object
<CustomObject>
    <description>IT On Point locations, including walk up break &amp; fix kiosks</description>
    <fields>
        <fullName>Campus_Code__c</fullName>
        <description>Campus code for IT On Point location - example LCC</description>
        <label>Campus Code</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country of IT On Point location</description>
        <inlineHelpText>enter entire country name</inlineHelpText>
        <label>Country</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_Source__c</fullName>
        <label>Image Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>IT On Point location name as it is known on campus (e.g. LCC has the &apos;walk up&apos; and the &apos;store&apos;)
NO SPECIAL CHARACTERS</description>
        <inlineHelpText>enter IT On Point location name as campus peers would reference it.  Do not include special characters.</inlineHelpText>
        <label>Name</label>
        <length>28</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Request_Types__c</fullName>
        <label>Primary Request Types</label>
        <picklist>
            <picklistValues>
                <fullName>Device Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application &amp; Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Setup &amp; Update</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Request_Types__c</fullName>
        <label>Secondary Request Types</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost | Stolen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Powering On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frozen - Figuratively</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frozen - Literally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Login | Authentication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup/Installation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State_Region__c</fullName>
        <description>State and/or Region used to locate IT On Point location</description>
        <label>State/Region</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <formula>Name + &apos; (&apos; + TEXT(Wait_Time__c) + &apos; min. wait)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Ticket_Time__c</fullName>
        <label>Total Ticket Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wait_Time__c</fullName>
        <formula>Total_Ticket_Time__c  /  Employees__c</formula>
        <label>Wait Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isOpen__c</fullName>
        <label>isOpen</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>openStatus__c</fullName>
        <label>openStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>status</label>
        <type>Checkbox</type>
    </fields>
    <label>ITOP Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ITOP Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ITOP Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>